[package]
name = "luxor_trend"
version = "0.1.0"
edition = "2021"
authors = ["IronClaw Trading System"]
description = "Tomasini 2-MA Crossover Strategy WASM Module"
license = "MIT OR Apache-2.0"

# Independent workspace for WASM target
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
opt-level = 0
